--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
         <div class="container">
             <h1 id="title" class="type-text" style="visibility: visible; opacity: 1;">Why DonkeyGPT?<span class="cursor"></span></h1>
             <ul>
-                <li><b>Dragon-Proof Security Layers:</b> Built with Onion Encryption Technology™, it’s secure enough to fend off any bad actors—even Fairy Godmother's potions!</li>
-                <li><b>Zero-Ogre Block Times:</b> Amazon’s servers crashed when they felt the power of up to a Shrekillion transactions per second.</li>
-                <li><b>Swamp-to-Swamp Integration™:</b> DonkeyGPT helps ogres get outta swamp with real ease.</li>
+                <li class="description type-text" style="visibility: visible; opacity: 1;"><b>Dragon-Proof Security Layers:</b> Built with Onion Encryption Technology™, it’s secure enough to fend off any bad actors—even Fairy Godmother's potions!</li>
+                <li class="description type-text" style="visibility: visible; opacity: 1;"><b>Zero-Ogre Block Times:</b> Amazon’s servers crashed when they felt the power of up to a Shrekillion transactions per second.</li>
+                <li class="description type-text" style="visibility: visible; opacity: 1;"><b>Swamp-to-Swamp Integration™:</b> DonkeyGPT helps ogres get outta swamp with real ease.</li>
             </ul>
         </div>
     </section>
