--- a/index.html
+++ b/index.html
@@ -177,8 +177,11 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#getting-started">How To Buy</a>
+                        <a class="nav-link" href="#getting-started">Buy</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#launch-info">Launch</a>
+                    </li>                    
                 </ul>
             </div>
         </div>
@@ -219,7 +222,7 @@
     
     
     <!-- Placeholder Section for Contract Address and Links -->
-    <section class="content-section placeholder-section">
+    <section id ="launch-info" class="content-section placeholder-section">
         <div class="container text-center">
             <h2 class="type-text" style="visibility: visible; opacity: 1;">Get Ready for Launch!</h2>
             <p style="visibility: visible; opacity: 1;">DonkeyGPT ($DNKGPT) will be launching on <strong>January 4th</strong> on <strong>Dexscreener Moonshot</strong>.</p>
